--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
-  - "1.9.2"
-  - "1.9.3"
-  - "2.0.0"
-script: bundle exec rspec
-
+  - 2.1
+  - 2.2
+  - 2.3.3
+before_install:
+  - gem install bundler
